// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PillButton> component in active, collapsed state (with content prop) should render correctly 1`] = `
<PillButton
  content="This pill is in use"
  name="Pill name"
  onClear={[MockFunction]}
  toggleDropdown={[MockFunction]}
>
  <div
    className="PillButton"
  >
    <div
      className="PillButton__label PillButton__label--isActive"
    >
      Pill name
    </div>
    <div
      className="PillButton__pill PillButton__pill--isActive"
      onClick={[MockFunction]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="PillButton__pillLabel"
      >
        This pill is in use
      </span>
      <button
        className="PillButton__button"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <IoMdClose>
          <IconBase
            attr={
              Object {
                "viewBox": "0 0 512 512",
              }
            }
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"
                key="0"
              />
            </svg>
          </IconBase>
        </IoMdClose>
      </button>
    </div>
  </div>
</PillButton>
`;

exports[`<PillButton> component in active, open state (content and isOpen prop) should render correctly 1`] = `
<PillButton
  content="This pill is in use"
  isOpen={true}
  name="Pill name"
  onClear={[MockFunction]}
  toggleDropdown={[MockFunction]}
>
  <div
    className="PillButton"
  >
    <div
      className="PillButton__label PillButton__label--isActive"
    >
      Pill name
    </div>
    <div
      className="PillButton__pill PillButton__pill--isOpen PillButton__pill--isActive"
      onClick={[MockFunction]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="PillButton__pillLabel"
      >
        This pill is in use
      </span>
      <button
        className="PillButton__button"
        type="button"
      >
        <IoIosArrowDown
          className="PillButton__arrowIcon PillButton__arrowIcon--isOpen"
        >
          <IconBase
            attr={
              Object {
                "viewBox": "0 0 512 512",
              }
            }
            className="PillButton__arrowIcon PillButton__arrowIcon--isOpen"
          >
            <svg
              className="PillButton__arrowIcon PillButton__arrowIcon--isOpen"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
                key="0"
              />
            </svg>
          </IconBase>
        </IoIosArrowDown>
      </button>
    </div>
  </div>
</PillButton>
`;

exports[`<PillButton> component in inactive, collapsed state (with minimal props) should render correctly 1`] = `
<PillButton
  name="Pill name"
  onClear={[MockFunction]}
  toggleDropdown={[MockFunction]}
>
  <div
    className="PillButton"
  >
    <div
      className="PillButton__label"
    />
    <div
      className="PillButton__pill"
      onClick={[MockFunction]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="PillButton__pillLabel"
      >
        Pill name
      </span>
      <button
        className="PillButton__button"
        type="button"
      >
        <IoIosArrowDown
          className="PillButton__arrowIcon"
        >
          <IconBase
            attr={
              Object {
                "viewBox": "0 0 512 512",
              }
            }
            className="PillButton__arrowIcon"
          >
            <svg
              className="PillButton__arrowIcon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
                key="0"
              />
            </svg>
          </IconBase>
        </IoIosArrowDown>
      </button>
    </div>
  </div>
</PillButton>
`;

exports[`<PillButton> component in inactive, open state (isOpen prop) should render correctly 1`] = `
<PillButton
  isOpen={true}
  name="Pill name"
  onClear={[MockFunction]}
  toggleDropdown={[MockFunction]}
>
  <div
    className="PillButton"
  >
    <div
      className="PillButton__label"
    />
    <div
      className="PillButton__pill PillButton__pill--isOpen"
      onClick={[MockFunction]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="PillButton__pillLabel"
      >
        Pill name
      </span>
      <button
        className="PillButton__button"
        type="button"
      >
        <IoIosArrowDown
          className="PillButton__arrowIcon PillButton__arrowIcon--isOpen"
        >
          <IconBase
            attr={
              Object {
                "viewBox": "0 0 512 512",
              }
            }
            className="PillButton__arrowIcon PillButton__arrowIcon--isOpen"
          >
            <svg
              className="PillButton__arrowIcon PillButton__arrowIcon--isOpen"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
                key="0"
              />
            </svg>
          </IconBase>
        </IoIosArrowDown>
      </button>
    </div>
  </div>
</PillButton>
`;
